## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(WX_CXXFLAGS)

AM_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ast

ast_SOURCES = \
	main.cc\
	junction.h\
	road.h\
	junction.cc\
	tinystr.cpp\
	tinystr.h\
	tinyxml.cpp\
	tinyxml.h\
	tinyxmlerror.cpp\
	tinyxmlparser.cpp\
	simulator.h\
	car.h\
	road.cc\
	simulator.cc\
	car.cc\
	simulatordisplay.h\
	simulatordisplay.cc

ast_LDFLAGS = 

ast_LDADD =  \
	$(WX_LIBS)

